Fix dark mode on canvas controls

--- a/src/assets/style/components/canvas/_canvas-controls.scss
+++ b/src/assets/style/components/canvas/_canvas-controls.scss
@@ -13,6 +13,7 @@
   box-shadow: $controls-shadow;
   transform: translate(-50%, -50%);
   transition: background-color $theme-transition, gap 0.3s;
+  cursor: default;
 
   @include for-narrow-layout {
     inset: 50% auto auto 0;
@@ -78,7 +79,7 @@
     }
   }
 
-  &:not(.drawing):hover {
+  &:hover {
     gap: 15px;
 
     .btn {
